[gd_scene format=3 uid="uid://cxa3sqvykgcp8"]

[ext_resource type="SpriteFrames" uid="uid://bmnnqb5d5eejs" path="res://art/player_sprite.tres" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://3mcgdlgcr3su" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Script" uid="uid://cucayldjgb4ng" path="res://scripts/dialogue.gd" id="3_d2wvv"]
[ext_resource type="Script" uid="uid://b7a1va7x6kykq" path="res://scripts/mask_menu.gd" id="3_qhqgy"]
[ext_resource type="AudioStream" uid="uid://b36dkxvxvrraj" path="res://audio/music/LOKE Loop.mp3" id="4_dqkch"]
[ext_resource type="AudioStream" uid="uid://deej35agcvj2k" path="res://audio/music/HORSE Loop.mp3" id="5_qlg0r"]
[ext_resource type="Script" uid="uid://c1gojr47gwi8p" path="res://scripts/pause.gd" id="6_fjrip"]
[ext_resource type="AudioStream" uid="uid://cwcvg34yqxq65" path="res://audio/sfx/Footstep SFX.wav" id="6_smehm"]
[ext_resource type="PackedScene" uid="uid://ckeqfs4ao5qvd" path="res://scenes/settings.tscn" id="6_tuyoq"]
[ext_resource type="AudioStream" uid="uid://4yy83io38kpd" path="res://audio/music/FREJA Loop.mp3" id="6_ur7pv"]
[ext_resource type="AudioStream" uid="uid://p17tcjjptixe" path="res://audio/music/JaÌˆtten Loop.mp3" id="7_y4r1p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8vuu"]
size = Vector2(16, 26)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2wvv"]
bg_color = Color(0, 0, 0, 1)

[node name="Player" type="CharacterBody2D" unique_id=155016044]
motion_mode = 1
script = ExtResource("1_g2els")
speed = 100.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=43766644]
shape = SubResource("RectangleShape2D_u8vuu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=506383766]
position = Vector2(0, -3)
sprite_frames = ExtResource("1_3vyb7")
animation = &"human_down"

[node name="Camera2D" type="Camera2D" parent="." unique_id=861688044]

[node name="Dialogue" type="Panel" parent="." unique_id=1428487342]
visible = false
offset_left = -256.0
offset_top = 80.0
offset_right = 256.0
offset_bottom = 144.0
theme_override_styles/panel = SubResource("StyleBoxFlat_d2wvv")
script = ExtResource("3_d2wvv")

[node name="Label" type="Label" parent="Dialogue" unique_id=1182903427]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 8.0
offset_right = -16.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 2

[node name="MaskMenu" type="VBoxContainer" parent="." unique_id=1490406067]
process_mode = 2
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -144.0
offset_right = 256.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("3_qhqgy")

[node name="Label" type="Label" parent="MaskMenu" unique_id=539112249]
layout_mode = 2
text = "Masks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MaskMenu" unique_id=1328660204]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="Humanoid" type="Button" parent="MaskMenu/GridContainer" unique_id=100383884]
layout_mode = 2
text = "Humanoid"

[node name="Horse" type="Button" parent="MaskMenu/GridContainer" unique_id=1990096865]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
text = "Horse
"

[node name="Bird" type="Button" parent="MaskMenu/GridContainer" unique_id=1200863349]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
text = "Bird"

[node name="Jotun" type="Button" parent="MaskMenu/GridContainer" unique_id=735881513]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 0)
text = "Jotun"

[node name="LokiMusic" type="AudioStreamPlayer" parent="." unique_id=120207228]
process_mode = 3
stream = ExtResource("4_dqkch")
autoplay = true
bus = &"Music"

[node name="HorseMusic" type="AudioStreamPlayer" parent="." unique_id=976099433]
process_mode = 3
stream = ExtResource("5_qlg0r")
volume_db = -80.0
autoplay = true
bus = &"Music"

[node name="BirdMusic" type="AudioStreamPlayer" parent="." unique_id=711272674]
stream = ExtResource("6_ur7pv")
volume_db = -80.0
autoplay = true
bus = &"Music"

[node name="GuardMusic" type="AudioStreamPlayer" parent="." unique_id=1469831266]
stream = ExtResource("7_y4r1p")
volume_db = -80.0
autoplay = true
bus = &"Music"

[node name="Footstep" type="AudioStreamPlayer" parent="." unique_id=159932309]
stream = ExtResource("6_smehm")
bus = &"SFX"

[node name="Pause" type="Control" parent="." unique_id=1646923132]
process_mode = 2
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -144.0
offset_right = 256.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_fjrip")

[node name="Label" type="Label" parent="Pause" unique_id=2023786686]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = 64.0
offset_right = 35.0
offset_bottom = 87.0
grow_horizontal = 2
text = "Paused"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Resume" type="Button" parent="Pause" unique_id=787240734]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -23.0
offset_top = 128.0
offset_right = 23.0
offset_bottom = 148.0
grow_horizontal = 2
text = "Resume"

[node name="Quit" type="Button" parent="Pause" unique_id=450893778]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = 160.0
offset_right = 33.0
offset_bottom = 180.0
grow_horizontal = 2
text = "Quit to menu"

[node name="Settings" parent="Pause" unique_id=119162812 instance=ExtResource("6_tuyoq")]
layout_mode = 1
offset_top = 32.0
offset_bottom = 32.0

[connection signal="pressed" from="MaskMenu/GridContainer/Humanoid" to="MaskMenu" method="_on_humanoid_pressed"]
[connection signal="pressed" from="MaskMenu/GridContainer/Horse" to="MaskMenu" method="_on_horse_pressed"]
[connection signal="pressed" from="MaskMenu/GridContainer/Bird" to="MaskMenu" method="_on_bird_pressed"]
[connection signal="pressed" from="MaskMenu/GridContainer/Jotun" to="MaskMenu" method="_on_jotun_pressed"]
[connection signal="pressed" from="Pause/Resume" to="Pause" method="_on_resume_pressed"]
[connection signal="pressed" from="Pause/Quit" to="Pause" method="_on_quit_pressed"]
